--- a/2/build_html_da.ipynb
+++ b/2/build_html_da.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-f15eabe81fd7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmetafile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mattr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpaper\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp3\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "metafile = open('meta_da.csv')\n",
     "data = []\n",
@@ -31,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tr><th scope=\"row\"><p>1</p></th><td style=\"word-break:break-word;\">Anonymous Pony<br><strong></strong><br>(Jan 17, 2020)</td><td>76.71</td><td>86.69</td><td>66.72</td><td>78.46</td></tr><tr><th scope=\"row\"><p>2</p></th><td style=\"word-break:break-word;\">Anonymous Python<br><strong></strong><br>(Dec 25, 2019)</td><td>66.41</td><td>83.52</td><td>51.85</td><td>73.60</td></tr><tr><th scope=\"row\"><p>3</p></th><td style=\"word-break:break-word;\">Anonymous Groundhog<br><strong></strong><br>(Dec 25, 2019)</td><td>67.23</td><td>82.09</td><td>54.32</td><td>71.01</td></tr><tr><th scope=\"row\"><p>4</p></th><td style=\"word-break:break-word;\">BERT-PAIR<a href=\"https://www.aclweb.org/anthology/D19-1649.pdf\">[paper]</a><a href=\"https://github.com/thunlp/fewrel\">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>67.41</td><td>78.57</td><td>54.89</td><td>66.85</td></tr><tr><th scope=\"row\"><p>5</p></th><td style=\"word-break:break-word;\">Proto-ADV (CNN)<a href=\"https://www.aclweb.org/anthology/D19-1649.pdf\">[paper]</a><a href=\"https://github.com/thunlp/fewrel\">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>42.21</td><td>58.71</td><td>28.91</td><td>44.35</td></tr><tr><th scope=\"row\"><p>6</p></th><td style=\"word-break:break-word;\">Proto-ADV (BERT)<a href=\"https://www.aclweb.org/anthology/D19-1649.pdf\">[paper]</a><a href=\"https://github.com/thunlp/fewrel\">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>41.90</td><td>54.74</td><td>27.36</td><td>37.40</td></tr><tr><th scope=\"row\"><p>7</p></th><td style=\"word-break:break-word;\">Proto-BERT<br><strong></strong><br>(Nov 3, 2019)</td><td>40.12</td><td>51.50</td><td>26.45</td><td>36.93</td></tr><tr><th scope=\"row\"><p>8</p></th><td style=\"word-break:break-word;\">Proto-CNN<br><strong></strong><br>(Nov 3, 2019)</td><td>35.09</td><td>49.37</td><td>22.98</td><td>35.22</td></tr>\n"
+      "<tr><th scope=\"row\"><p>1</p></th><td style=\"word-break:break-word;\">DualGraph<br><strong>Anonymous</strong><br>(Aug 2, 2020)</td><td>80.11</td><td>91.01</td><td>73.89</td><td>82.34</td></tr><tr><th scope=\"row\"><p>2</p></th><td style=\"word-break:break-word;\">PAMN<br><strong>Anonymous</strong><br>(Jun 8, 2020)</td><td>77.54</td><td>90.40</td><td>65.98</td><td>82.03</td></tr><tr><th scope=\"row\"><p>3</p></th><td style=\"word-break:break-word;\">Anonymous Pony<br><strong></strong><br>(Jan 17, 2020)</td><td>76.71</td><td>86.69</td><td>66.72</td><td>78.46</td></tr><tr><th scope=\"row\"><p>4</p></th><td style=\"word-break:break-word;\">Anonymous Python<br><strong></strong><br>(Dec 25, 2019)</td><td>66.41</td><td>83.52</td><td>51.85</td><td>73.60</td></tr><tr><th scope=\"row\"><p>5</p></th><td style=\"word-break:break-word;\">Anonymous Groundhog<br><strong></strong><br>(Dec 25, 2019)</td><td>67.23</td><td>82.09</td><td>54.32</td><td>71.01</td></tr><tr><th scope=\"row\"><p>6</p></th><td style=\"word-break:break-word;\">BERT-PAIR<a href=\"https://www.aclweb.org/anthology/D19-1649.pdf\">[paper]</a><a href=\"https://github.com/thunlp/fewrel\">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>67.41</td><td>78.57</td><td>54.89</td><td>66.85</td></tr><tr><th scope=\"row\"><p>7</p></th><td style=\"word-break:break-word;\">Proto-ADV (CNN)<a href=\"https://www.aclweb.org/anthology/D19-1649.pdf\">[paper]</a><a href=\"https://github.com/thunlp/fewrel\">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>42.21</td><td>58.71</td><td>28.91</td><td>44.35</td></tr><tr><th scope=\"row\"><p>8</p></th><td style=\"word-break:break-word;\">Proto-ADV (BERT)<a href=\"https://www.aclweb.org/anthology/D19-1649.pdf\">[paper]</a><a href=\"https://github.com/thunlp/fewrel\">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>41.90</td><td>54.74</td><td>27.36</td><td>37.40</td></tr><tr><th scope=\"row\"><p>9</p></th><td style=\"word-break:break-word;\">Proto-BERT<br><strong></strong><br>(Nov 3, 2019)</td><td>40.12</td><td>51.50</td><td>26.45</td><td>36.93</td></tr><tr><th scope=\"row\"><p>10</p></th><td style=\"word-break:break-word;\">Proto-CNN<br><strong></strong><br>(Nov 3, 2019)</td><td>35.09</td><td>49.37</td><td>22.98</td><td>35.22</td></tr>\n"
      ]
     }
    ],
